Rainbow not visible on front page anymore, fixed styling in readme, created variables in layout

--- a/assets/styles/_layout.scss
+++ b/assets/styles/_layout.scss
@@ -1,2 +1,8 @@
+// Rainbow
 $rainbow-diameter: 600px;
 $rainbow-thickness: 60px;
+// Tree
+$tree-height-width: 50vmin;
+$trunk-height: 5vmin;
+$branch-height: 19vmin;
+$branch-width: 2vmin;
